# PRLM

./: .gitignore  LICENSE  MANIFEST.in  PYPI_PUBLISHING_GUIDE.md  README.md  USAGE_GUIDE.md  example_usage.py  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
config/: config.yaml
output/: PR_Analysis_OCPBUGS57322 Update the default MTU statement in O_20250731_192346.docx
src/pr_analyzer/: GUI_README.md  __init__.py  conversation_analyzer.py  demo_screenshots.md  demo_setup.py  document_generator.py  github_client.py  launch_gui.py  llm_client.py  main.py  pr_analyzer_gui.py  professional_theme.py  repomix_integration.py  run_gui.py  timeline_analyzer.py
